--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,15 @@
+h1 {
+    margin: 0;
+    text-align: center;
+}
+
+p {
+    display: inline;
+}
+.container {
+    width: 100%;
+    height: 100%;
+}
 .area-wrapper {
     width: 100%;
     height: 100%;
@@ -7,6 +19,7 @@
 }
 
 #area {
+    margin-top: 10px;
     width: 300px;
     height: 300px;
     background-color: bisque;
@@ -24,4 +37,15 @@
     display: flex;
     justify-content: center;
     align-items: center;
+}
+
+.por {
+    font-size: 45px;
+    border: 1px solid black;
+    margin: 20px;
+    top: 35px;
+    width: 350px;
+    height: 200px;
+    background-color: bisque;
+    position: absolute;
 }
